# ChangeLog for dev-libs/atk
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/ChangeLog,v 1.176 2009/04/27 13:12:38 jer Exp $

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> atk-1.24.0:
  Stable for HPPA (bug #260063).

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> ChangeLog:
  Stable on sparc, bug #260063

  27 Mar 2009; Raúl Porcel <armin76@gentoo.org> atk-1.24.0.ebuild:
  arm/s390/sh/sparc stable

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> atk-1.24.0.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> atk-1.24.0.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> atk-1.24.0.ebuild:
  Marked stable on amd64

  06 Mar 2009; Patrick Lauer <patrick@gentoo.org> Manifest:
  fixing Manifest

  06 Mar 2009; Brent Baude <ranger@gentoo.org> atk-1.24.0.ebuild:
  Marking atk-1.24.0 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> atk-1.24.0.ebuild:
  Marking atk-1.24.0 ppc64 stable for bug 260063

  13 Nov 2008; Brent Baude <ranger@gentoo.org> atk-1.22.0.ebuild:
  Marking atk-1.22.0 ppc64 stable for bug 236971

  29 Sep 2008; Mart Raudsepp <leio@gentoo.org> -atk-1.18.0.ebuild,
  atk-1.20.0.ebuild:
  Remove old

*atk-1.24.0 (29 Sep 2008)

  29 Sep 2008; Mart Raudsepp <leio@gentoo.org> +atk-1.24.0.ebuild:
  Version bump. No user visible changes

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> atk-1.22.0.ebuild:
  Stable for HPPA (bug #236971).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> atk-1.22.0.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> atk-1.22.0.ebuild:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> atk-1.22.0.ebuild:
  Marking atk-1.22.0 ppc stable for bug 229709

  26 Jul 2008; Olivier Crête <tester@gentoo.org> atk-1.22.0.ebuild:
  Stable on amd64, bug #229709

*atk-1.22.0 (17 Mar 2008)
