@@ -1,8 +1,10 @@
 DIST atk-1.20.0.tar.bz2 705435 RMD160 330e2534e17d1e75254226c976c2f7e76c888edf SHA1 e309fed4154819194ddbf9be4ca3252cc31434cf SHA256 1f3b2f2cbb5b0d8da0924970c66c3ecbfe13c4e4360b0af1db7545401a3747c9
 DIST atk-1.22.0.tar.bz2 709221 RMD160 3e7c2c5fa2b3c731c5fd376c8ad76646cb7b9306 SHA1 d07a42aff241f58e3bde7fe25be94f989361c605 SHA256 677d66e9a0fc919042c28d40bf9356f45953d218fe613a84137e9f3d8c225de9
 DIST atk-1.24.0.tar.bz2 701798 RMD160 63ce673732286f001f908316f06b8eb08c256943 SHA1 85ff5bd8f1879d2a43dfcf4842fc5ea9125dec11 SHA256 03a0b66efb6d69754ca18c133ca4d489dd8675bf366c03f58cc7b39f55a45d56
+DIST atk-1.26.0.tar.bz2 719807 RMD160 179a3a2dfb2c2e1e0a0bb0e25c43f7f26e9d3e1d SHA1 c31ae32fc7304430cdd45e7e85c7fda788e39471 SHA256 f7993d26c3606a9b0e32d1eebe716f2294ac37fac014c47744e986fc0ff5e6d1
 EBUILD atk-1.20.0.ebuild 645 RMD160 300db9d72f3d35821f8044d204becc881f92123b SHA1 a4655f21150e091679e13a1c11f7eec11a850e92 SHA256 181838639def888b19b7520900978cdc914c86937bcbb7f199672cd63345aad7
 EBUILD atk-1.22.0.ebuild 663 RMD160 b4ba677f5cbb83d9d6b544b8c81cf9141cdabe9d SHA1 c6930002b69ba646288e40ee0b0fb18a6e68cd0d SHA256 c4759fd001861d743f4976047bdf3585cd43b0b0d240b049486dd5224eefde2f
 EBUILD atk-1.24.0.ebuild 754 RMD160 87b8ffa959b49c580ca2026cd2b521ca91c6b1a0 SHA1 8891ad9f90f8b585481f2df652cb9691e1b0b1c9 SHA256 88db1ce1b6ea73cf931d6ecbfe1f3489fc90f5a37f0bb99034dae876407da01e
-MISC ChangeLog 18369 RMD160 cf5387769a14e3ac272b16e27a848f5e63b48e89 SHA1 9ddc5261568d842bf1b6ae76cf6deb3656497a2f SHA256 e5fc0c776dd7e7112cddf8980f68b8d1904490c38ef3859b262f360759b7abe2
+EBUILD atk-1.26.0.ebuild 786 RMD160 ed1c3cbfaa6eeeb2ef798a03d93c60d14d4cfe88 SHA1 19c774e972700db89e0b0da63aa841a99ce02d2b SHA256 2a6ed45570f1461938981ea7d38ed2fe4bf44b4fc2f394ecd4c6e27d2f5f554e
+MISC ChangeLog 18539 RMD160 18cb17cb820ad007bbefcc0224fe0d4434243cbe SHA1 343b16ad132e5f16f5e797a6627337f5206e7c8f SHA256 2825cc34380be507e6a052124ea0a98789a20a3e4cc6a83eb6e7761c3c450c11
 MISC metadata.xml 174 RMD160 fcec784ea33cca49a78866d7f2068a167880ad3d SHA1 da662ca8b44bdb64713fae18ab7c18814ef672f5 SHA256 c0255e6a66375ac0e7f11c3712c6b47b7746432df4cf518e10c230674a6bc4f0
